<resources>
    <string name="app_name">Java Bean</string>
    <string name="hello_pat">Hello Pat!</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="sugar">Sugar</string>
    <string name="whip_cream">Whip Cream</string>
    <string name="quantity">Quantity</string>
    <string name="quantityHolder">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="submit">Submit</string>
    <string name="el_cafe_de_lukaku">EL CAFE DE LUKAKU</string>
    <string name="textview">TextView</string>
    <string name="orderSummary">The following order was placed:</string>
    <string-array name="menu_items">
        <item>Espresso</item>
        <item>Latte</item>
        <item>Cappuccino</item>
    </string-array>

</resources>